# guardrails-core

./: README.md  demo.py  engine.py  gitignore  pyproject.toml  test_engine.py
.github/workflows/: tests.yml
conformance/: cases.json
guardrails/: __init__.py  audit.py  engine.py  intent.py  policy.py  rules.py  verdict.py
js/: package.json
js/test/: conformance.test.js
tests/: test_conformance.py  test_engine.py
