[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "guardrails-core"
version = "0.1.0"
description = "A decision layer for actions that move money — agent-proposed or counterparty-proposed."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["ai-safety", "agents", "scam-detection", "guardrails", "audit"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["guardrails*"]
